[gd_scene load_steps=10 format=3 uid="uid://buw16sqeuub2t"]

[ext_resource type="Script" path="res://Bird/bird.gd" id="1_0fvuy"]
[ext_resource type="Texture2D" uid="uid://dia53g7wyni6p" path="res://sprites/bread-downflap.png" id="2_b0tjg"]
[ext_resource type="Texture2D" uid="uid://chkrqy0paqi4s" path="res://sprites/bread-midflap.png" id="3_wxijt"]
[ext_resource type="Texture2D" uid="uid://dphd5syx0l7j8" path="res://sprites/bread-upflap.png" id="4_5fhm7"]
[ext_resource type="AudioStream" uid="uid://othwegl5d1o3" path="res://audio/wing.wav" id="5_awv18"]
[ext_resource type="AudioStream" uid="uid://kgb63er2oyqg" path="res://audio/hit.wav" id="6_7x1eu"]
[ext_resource type="AudioStream" uid="uid://crgl2ek2qtmb8" path="res://audio/thud.wav" id="7_yb0e2"]

[sub_resource type="SpriteFrames" id="2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_b0tjg")
}, {
"duration": 1.0,
"texture": ExtResource("3_wxijt")
}, {
"duration": 1.0,
"texture": ExtResource("4_5fhm7")
}],
"loop": true,
"name": &"flap",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8ebiv"]
radius = 6.0
height = 26.0

[node name="Bird" type="CharacterBody2D" groups=["birb"]]
script = ExtResource("1_0fvuy")

[node name="flapSp" type="AnimatedSprite2D" parent="."]
texture_filter = 3
position = Vector2(0, 4)
sprite_frames = SubResource("2")
animation = &"flap"
autoplay = "flap"
frame_progress = 0.641507

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.57079
shape = SubResource("CapsuleShape2D_8ebiv")

[node name="flapSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_awv18")
volume_db = -9.999

[node name="hitSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_7x1eu")
volume_db = -9.369

[node name="thudSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_yb0e2")
volume_db = -9.369
pitch_scale = 1.86
